# monerosim

./: .gitignore  20260425_quickstart.scenario.yaml  20260425_quickstart.yaml  20260430_upgrade.scenario.yaml  AGENT_CONFIG_ARCHITECTURE_DESIGN.md  AGENT_CONFIG_DEBUG_REPORT.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_DIAGRAMS_V2.md  ARCHITECTURE_RESPONSE.md  ARCHITECTURE_SUMMARY.md  ATTRIBUTE_ANALYSIS_REPORT.md  BLOCK_CONTROLLER_PRODUCTION_TEST.md  BLOCK_CONTROLLER_WALLET_FIX_REPORT.md  CHANGELOG.md  CLAUDE.md  CODE_STRUCTURE.md  COMPREHENSIVE_INTEGRATION_TESTING_REPORT.md  COMPREHENSIVE_INTERNET_TOPOLOGY_TEST_README.md  CONTRIBUTING.md  Cargo.toml  DECENTRALIZED_WALLET_REGISTRATION_IMPLEMENTATION.md  DECRYPTED_WALLET_REGISTRATION_FAILURE_ANALYSIS.md  DESIGN.md  DETERMINISM_FIXES.md  ETHSHADOW_ANALYSIS.md  FIX_SHADOW_YAML_GENERATION_PROMPT.md  FUTURE_MAINTENANCE_RECOMMENDATIONS.md  GML_NETWORK_PERFORMANCE_ANALYSIS_REPORT.md  GML_NETWORK_TOPOLOGY_PROOF.md  GML_SIMULATION_FINDINGS_SUMMARY.md  HIERARCHICAL_ADDRESSING_TEST_SUMMARY.md  HYBRID_ARCHITECTURE_PROPOSAL.md  IMPLEMENTATION_PLAN.md  IP_TRACKING_REPORT_30_AGENTS.md  IS_MINER_MIGRATION_FINAL_REPORT.md  LICENSE  MIGRATION_GUIDE.md  MINING_DEBUG_REPORT.md  MINING_HOOKS_FINAL_STATUS.md  MINING_INITIALIZATION_ARCHITECTURE.md  (+167 more)
20250916/: success_analysis_report.json
20260208_tests/: 01_basic_relay.expanded.yaml  01_basic_relay.scenario.yaml  02_relay_only.expanded.yaml  02_relay_only.scenario.yaml  03_relay_upgrade.expanded.yaml  03_relay_upgrade.scenario.yaml  04_large_relay_group.expanded.yaml  04_large_relay_group.scenario.yaml  05_mixed_agents.expanded.yaml  05_mixed_agents.scenario.yaml  06_relay_daemon_options.expanded.yaml  06_relay_daemon_options.scenario.yaml  07_cli_relay_nodes.expanded.yaml  08_singleton_relay.expanded.yaml  08_singleton_relay.scenario.yaml  results.txt  run_all_tests.sh  run_shadow_sims.sh  simulation_results.txt
20260209_425d4_tests/: 01_basic_relay.expanded.yaml  01_basic_relay.scenario.yaml  02_relay_only.expanded.yaml  02_relay_only.scenario.yaml  03_relay_upgrade.expanded.yaml  03_relay_upgrade.scenario.yaml  04_large_relay_group.expanded.yaml  04_large_relay_group.scenario.yaml  05_mixed_agents.expanded.yaml  05_mixed_agents.scenario.yaml  06_relay_daemon_options.expanded.yaml  06_relay_daemon_options.scenario.yaml  08_singleton_relay.expanded.yaml  08_singleton_relay.scenario.yaml  results.txt  run_shadow_sims.sh  simulation_results.txt
TODO/: code-quality-refactoring-plan.md  dns-checkpoint-oracle.md  fix-dns-tcp-in-shadow.md  multi-cohort-activity-batching.md  ripe-atlas-as-latency.md  simplify-bash-wrappers.md  small-footprint-flag.md
agents/: __init__.py  agent_discovery.py  autonomous_miner.py  base_agent.py  block_controller.py  constants.py  dns_server.py  marketplace.py  miner_distributor.py  miner_init.sh  mining_pool.py  monero_rpc.py  public_node_discovery.py  regular_user.py  run_wallet_registration_tests.py  shared_utils.py  simulation_monitor.py  tcp_mining_agent.py  test_agent_discovery.py  test_autonomous_miner.py  test_base_agent.py  test_dns_server.py  test_miner_distributor.py  test_monero_rpc.py  test_public_node_discovery.py  test_regular_user.py  test_results_small_scale.md  test_simulation_monitor.py
analysis/: get_p2p_log_robust.R  ruck_analysis.r  ruck_analysis_churn.r  ruck_analysis_turnover.r
analysis_results/: connection_details.json  ip_analysis.json  ip_analysis_summary.txt  network_graph.json  network_summary.txt  network_topology.graphml
attic/: AUDIT_20260512.md  README.md  RELEASE_PLAN_v0.1.0.md  enhanced_monitor.py  log_processor.py  regenerate_enhanced_blocks.py  sync_check.py  verify_transaction_inclusion.py
caida_50_sim/: shadow_agents.yaml
caida_50_sim_clean/: shadow_agents.yaml
caida_complete_sim/: shadow_agents.yaml
caida_connected_sim/: shadow_agents.yaml
caida_final_sim/: shadow_agents.yaml
caida_final_small_sim/: shadow_agents.yaml
caida_ready_sim/: shadow_agents.yaml
caida_small_sim/: shadow_agents.yaml
docs/: 20250208_codereviews.md  20260503_refactor_plan.md  20260506_1011node_validation.md  20260512_how_pow_works.md  20260605_max_connections_per_ip_bug.md  20260610_rucknium_issue3_reply_draft_v2.md  20260610_rucknium_review_response_v2.md  20260618_mainnet_topology_targets.md  20260620_network_topology_study.md  20260711_code_quality_review.md  20260714_shadowformonero_v3.3.0_sync.md  AGENT_FRAMEWORK.md  (+50 more)
(+617 files in other folders)
