[package]
name = "monerosim"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "GPL-3"
description = "Configuration utility for Monero network simulations in Shadow"
authors = ["MoneroSim Developer"]

[dependencies]
# Command-line argument parsing with derive feature
clap = { version = "4.5", features = ["derive"] }

# YAML file parsing
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
color-eyre = "0.6"
thiserror = "1.0"

# Standard library extensions
humantime-serde = "1.1"

# Random number generation
rand = "0.8"

# Regular expressions for parsing
regex = "1.10"

# Parallel processing for log analysis
rayon = "1.10"

# Binary serialization for parsed log cache
bincode = "1.3"
zstd = "0.13"

# Date/time handling for log timestamps
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# Temporary files for testing
tempfile = "3.8"

[[bin]]
name = "monerosim"
path = "src/main.rs"

[[bin]]
name = "tx-analyzer"
path = "src/bin/tx_analyzer.rs"

[profile.release]
lto = "fat"
codegen-units = 1
